--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -78,7 +78,12 @@
     margin-top: 0px;
 }
 
-
+@media (max-width: 600px) {
+    .subSpItems {
+        flex-direction: column;
+        align-items: center;
+    }
+}
 
 
 @media (min-width: 992px) {
