--- a/styles/Menu.module.css
+++ b/styles/Menu.module.css
@@ -50,6 +50,12 @@
     flex-wrap: wrap;
 }
 
+ @media (max-width: 600px) {
+    .menuCard {
+        flex-direction: column;
+        align-items: center;
+    }
+ }
 
 
  @media (max-width: 800px ) {
